add HDSP_SMOOTHED processing algorithm with configurable thresholds